# ChangeLog for dev-python/plac
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Jul 2011; James Rowe <jnrowe@gmail.com> plac-0.9.0.ebuild:
  Keyworded amd64.

*plac-0.9.0 (22 Jun 2011)

  22 Jun 2011; James Rowe <jnrowe@gmail.com> +plac-0.9.0.ebuild:
  Version bump [392].

  18 May 2011; James Rowe <jnrowe@gmail.com> -plac-0.8.0.ebuild,
  plac-0.8.1.ebuild:
  Keyworded x86.

  18 May 2011; James Rowe <jnrowe@gmail.com> plac-0.8.1.ebuild:
  Keyworded amd64.

*plac-0.8.1 (18 Apr 2011)

  18 Apr 2011; James Rowe <jnrowe@gmail.com> +plac-0.8.1.ebuild:
  Version bump [344].

  28 Mar 2011; James Rowe <jnrowe@gmail.com> -plac-0.7.5.ebuild,
  plac-0.8.0.ebuild:
  Keyworded x86.

  26 Mar 2011; James Rowe <jnrowe@gmail.com> plac-0.8.0.ebuild:
  Keyworded amd64.

*plac-0.8.0 (23 Feb 2011)

  23 Feb 2011; James Rowe <jnrowe@gmail.com> +plac-0.8.0.ebuild:
  Version bump [288].

  17 Feb 2011; James Rowe <jnrowe@gmail.com> -plac-0.7.4.ebuild,
  plac-0.7.5.ebuild:
  Keyworded x86.

  17 Feb 2011; James Rowe <jnrowe@gmail.com> plac-0.7.5.ebuild:
  Keyworded amd64.

*plac-0.7.5 (18 Jan 2011)

  18 Jan 2011; James Rowe <jnrowe@gmail.com> +plac-0.7.5.ebuild:
  Version bump [249].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  21 Oct 2010; James Rowe <jnrowe@gmail.com> -plac-0.7.2.ebuild,
  plac-0.7.4.ebuild:
  Keyworded x86.

  21 Oct 2010; James Rowe <jnrowe@gmail.com> plac-0.7.4.ebuild:
  Keyworded amd64.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  30 Sep 2010; James Rowe <jnrowe@gmail.com> plac-0.7.2.ebuild:
  Keyworded x86.

  30 Sep 2010; James Rowe <jnrowe@gmail.com> plac-0.7.2.ebuild:
  Keyworded amd64.

*plac-0.7.4 (21 Sep 2010)

  21 Sep 2010; James Rowe <jnrowe@gmail.com> +plac-0.7.4.ebuild:
  Version bump [#176].

  31 Aug 2010; James Rowe <jnrowe@gmail.com> plac-0.7.2.ebuild:
  Keyworded ~x86.

*plac-0.7.2 (31 Aug 2010)
