@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST plac-0.8.1.tar.gz 147761 RMD160 118b574008b2855814396b2118fbe75e77f20bf5 SHA1 f05519350d8e0a33ef78983e1b9fc9f22a493748 SHA256 2e70534e07cdec87ddcfb9d38d3bc39bf29158b8b74eb78052fdc68785c66321
 DIST plac-0.9.0.tar.gz 148758 RMD160 d469a924d57a32ccdbcd6181ce1a253b7d349a49 SHA1 4b803bc417a970536780e1c123b117b122604af0 SHA256 c36f7e82cdca18829dd9283d233ed2312e8bc526375aa5f209660b36c038b05b
-EBUILD plac-0.8.1.ebuild 804 RMD160 7d7d0404ea23b11155afee9eac5c3d6a2ccd63e1 SHA1 ec189d9ff8f0092ab2cc9600bde3a93d5c4e24e8 SHA256 30022db29261645e4435e31106dc969096d0806d3d50fd4cdb24dbf7f159cc7c
-EBUILD plac-0.9.0.ebuild 805 RMD160 bb1d06c75584406816d93697f6b7cec59ab681c8 SHA1 1e9f872a95e656870b6d3996b8ef0ffbf726270a SHA256 ae71f94d9bef96a9d6574d65cf78dc5db7ea106a0ff8dbbc650ca0797c38f69b
-MISC ChangeLog 2103 RMD160 cbf66144bf6f7cb1020da77489d3f2c1e0130567 SHA1 b465b7f793bdaab47fe8cfdbae3841163dce326c SHA256 207571f128aec3c239d46f78ba404be8a1602ccd57331a6765c484d355cba90f
+EBUILD plac-0.9.0.ebuild 804 RMD160 7d7d0404ea23b11155afee9eac5c3d6a2ccd63e1 SHA1 ec189d9ff8f0092ab2cc9600bde3a93d5c4e24e8 SHA256 30022db29261645e4435e31106dc969096d0806d3d50fd4cdb24dbf7f159cc7c
+MISC ChangeLog 2207 RMD160 a7b8d5614541bec12febf95fa53e9fb1de74745f SHA1 c20bddf0cfcf071bf20c26ce10c45d3822595ef5 SHA256 8ee68069cb5219862d18c897478c58509e4385feaf6d0741f97d3d54c0406b1a
 MISC metadata.xml 2849 RMD160 29a6293db1dd01ca559bb2ee3f0ead47584201e5 SHA1 8c9c4911f59282392fda5f9390b3b332b5ab824d SHA256 f886a6abc568208378d80e04c5f8cf8af485fab8f503ea153d31b537ab3c5b91
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4sMXYACgkQzJrj3cAXR0kKmwCfd521YRiius2vMOvvpcDCYANf
-mjgAn1RkYXYXTUEPcHL5f25UMfsqJfaN
-=N74Z
+iEYEAREKAAYFAk4sS+EACgkQzJrj3cAXR0kU6QCdFmV1DbVxSlatRNMaNNglJo32
+NsYAoJUBOunmggxIK1WB2xFmCV/516a2
+=jerY
 -----END PGP SIGNATURE-----
