@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Jul 2011; James Rowe <jnrowe@gmail.com> -plac-0.8.1.ebuild,
+  plac-0.9.0.ebuild:
+  Keyworded x86.
+
   24 Jul 2011; James Rowe <jnrowe@gmail.com> plac-0.9.0.ebuild:
   Keyworded amd64.
 
